# ion-dynamic-simulation

./: .gitattributes  .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.zh.md  TUTORIAL.md  benchmark_plot_performance.py  build.py  build.sh  clean_build.sh  cuda_debug  data  data_cache  dataplot.py  electrode_basis.json  field_visualize.py  grid_GSA_YRY_20241118.py  grid_data20241118.csv:Zone.Identifier  ionsim.cpp  main.cpp  main.py  pyproject.toml  requirements.txt  run_batch.py  setup.py  setup_path.py  test.py  torch.ipynb  useful_commands.ipynb  utils.py
.cursor/: rules.md
.cursor/rules/: project-rules.md
ComputeKernel/: CMakeLists.txt  Coulomb.cpp  Coulomb.hpp  Coulomb_cuda.cu  __init__.py  backend.py  ionsim.cpp  numerical_integration.cpp  numerical_integration.hpp  test_backend.py  types.hpp
FieldConfiguration/: 10000_flat.json  __init__.py  constants.py  default.json  field_settings.py  ion_species.py  loader.py
FieldConfiguration/configs/: default.json
FieldParser/: calc_field.py  csv_reader.py  data_standard.md  force.py  poly_force.py  potential_fit.py
ImgSimulation/: BATCH.md  __init__.py  __main__.py  api.py  batch.py  cli.py  gallery.py  geometry.py  illumination.py  integrate.py  json_config.py  json_dynamics.py  noise_model.py  normalize.py  pipeline.py  plane_trajectory_io.py  profile_util.py  psf.py  traj_zx_export.py  types.py  visualize.py
ImgSimulation/configs/: example_dynamics.json  example_imaging.json  example_ion_image.json
Interface/: bilayer_init.py  cli.py  parameters.py
Plotter/: __init__.py  blit.py  color.py  dataplot.py  vision.py
TrajectoryAnalysis/: __init__.py  equilibrium.py  run_equilibrium.py  visualize.py
analysis/: collision_p_flip.ipynb  crystal_compare.ipynb  crystal_plot.ipynb
benchmark/: __init__.py  common.py  device_compare.py  plot_compare.py
bilayer/: __init__.py  __main__.py  bilayer_prompt.md  lattice.py  visualize.py
bilayer/r0_single_layer/: r1.npz  r2.npz
collision_pressure/: DESIGN.md  TUTORIAL.md  __init__.py  __main__.py  _mpl_backend.py  build_config_library.py  collision.py  config_scan.py  pressure.py  reconfiguration.py  sampling.py  simulation.py  species.py  topology.py  visualize_collision.py  visualize_configs.py
collision_pressure/init_state/: N31,f0.6,2,0.1.npz
commands/: collision_simulation.txt
data/: monolithic20241118.csv
data_cache/: a.txt  cal.ipynb  coulomb.txt  r.txt
data_cache/2D/: loss_100.npy  loss_1000.npy  loss_10000.npy  loss_1100.npy  loss_1300.npy  loss_150.npy  loss_1500.npy  loss_300.npy  loss_500.npy  loss_6000.npy  r.npy  (+2 more)
dependencies/: debugpy-1.8.13-cp311-cp311-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  ipython-9.0.2-py3-none-any.whl  ipywidgets-8.1.6-py3-none-any.whl  jupyterlab_widgets-3.0.14-py3-none-any.whl  kiwisolver-1.4.8-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pyzmq-26.3.0-cp311-cp311-manylinux_2_28_x86_64.whl  tornado-6.4.2-cp38-abi3-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  tzdata-2025.1-py2.py3-none-any.whl  widgetsnbextension-4.0.14-py3-none-any.whl
docs/: TUTORIAL.md  cuda-coulomb-kernel-fix.md  field_optimize.md  harmonicity.md  micromotion_analysis.md  physics_review_20260602.md  symmetry_analysis.md  trap_stability.md
equilibrium/: __init__.py  energy.py  find_equilibrium.py  fit_potential.py  phonon.py  potential_fit_3d.py
example/: simulation.py  utils.py
examples/: dataplot.py  grid.py  simulation.py  utils.py
field_optimize/: __init__.py  __main__.py  cli.py  objective.py  optimizer.py  types.py
field_visualize/: __init__.py  __main__.py  cli.py  core.py  laplace_decompose.py  plots.py  symmetry.py  trap_freq.py
ioncpp/: CMakeLists.txt
ionsim/: ionsim.pyi
logs/: saved_config_0.1equicell_5000.txt
motion_analysis/: __init__.py  __main__.py  micromotion.py  micromotion_analysis.ipynb  plots.py  secularmotion_analysis.ipynb
parallel/: analyse.ipynb  compute_loss.py  dataplot.py  electrode_basis.json  iter2.py
saves/: RF_amp_300.json  bilayer.json  cpu_28.json  final_positions_300.npy  flat_28.json  flat_28_shuttle.json  flat_300ions.json  flat_60.json  flat_60_shuttle.json  positions_300.npy  saved_config1000.json  saved_config5000.json  saved_config_0.1equicell_5000.json  saved_config_equicell_1000.json  saved_config_regression_0.01_1000.json  saved_config_regression_0.01_5000.json  saved_config_regression_0.05_1000.json  saved_config_regression_0_10000_sym.json  saved_config_regression_1_1000.json  test_config.json
src/: 2D_analyser.ipynb  =1.25  bilayer_basis.json  cell.py  circle.py  circle_test.py  collision.ipynb  config.json  configuration.ipynb  configure.py  cooling rate.ipynb  crystal.ipynb  dataplot.py  electrode_basis.json  electrode_basis_60.json  electrode_basis_60_sym.json  electrode_basis_7.json  equi-configure.ipynb  field.ipynb  filed symmetry_analysis.ipynb  freq_analyse.py  isotope.py  iter.py  main.py  mode.ipynb  monolithic.py  optimize.py  rf_heating.ipynb  sequence.ipynb  test.ipynb  test.py  traj.ipynb  utils.py  var_y.shell
src/coulomb_hessian_cuda/: CMakeLists.txt  binding.cpp  coulomb_hessian.cu  coulomb_hessian.hpp
tests/: conftest.py  run_batch_cpu_cuda_trajectory_distance.py  test.py  test_cli.py  test_collision.py  test_cpu_cuda_error_accumulation.py  test_cpu_cuda_trajectory_distance.py  test_dataplot_continuous.py  test_field_optimize.py  test_field_visualize_freq.py  test_force.py  test_gallery_list_paths.py  test_imgsimulation.py  test_imgsimulation_batch.py  test_json_split.py  test_matplotlib_backend.py  test_micromotion.py  test_parameters.py  test_plane_trajectory_io.py  test_plot_legend.py  test_poly_force.py  test_traj_zx_export.py  test_trajectory_analysis.py  test_trap_stability.py
tools/: 2RF_field_analysis.ipynb  benchmark_img_batch.py  compare_potential_csv.py  gamma.ipynb  plot_crystal.py
traj/: 0.txt  r - 副本.txt  r - 副本.txt:Zone.Identifier  r.txt  traj.rar
trap_stability/: __init__.py  cli.py  stability.py
(+291 files in other folders)
