[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ism-main"
version = "1.0"
description = "离子阱动力学模拟"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ism-main = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["Interface*", "FieldConfiguration*", "FieldParser*", "ComputeKernel*", "Plotter*"]

[tool.setuptools]
py-modules = ["utils", "setup_path"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"
filterwarnings = ["ignore:.*"]
